--- a/index.html
+++ b/index.html
@@ -7,26 +7,32 @@
   </head>
   <body>
     <div class="container">
-      <ul id="slides">
-        <li class="slide" id="1">
-          <img src="images/myhacksaw.png" class="hacksaw" alt="">
-          <p class="hacksaw-text">Hacksaw</p>
-        </li>
-        <li class="slide showing" id="2">
-          <img src="images/chainsaw.png" class="chainsaw-img" alt="">
-          <p class="chainsaw-text">Chainsaw</p>
-        </li>
-        <li class="slide" id="3">
-          <img src="images/grip.png" alt="">
-          <p class="grip-text">Grip</p>
-        </li>
-      </ul>
-      <div class="buttons">
-        <button class="controls" id="previous">&lt;</button>
+          <ul id="slides">
+            <li class="slide first">
+              <img src="images/myhacksaw.png" class="hacksaw" alt="hacksawimg">
+              <p class="slide-text">Hacksaw</p>
+              <p class="slide-desciption">
+                Code: 171.1112010-40  Mark: 171-40</p>
+            </li>
+            <li class="slide showing">
+              <img src="images/chainsaw.png" class="chainsaw" alt="chainsawimg">
+              <p class="slide-text">Chainsaw</p>
+              <p class="slide-desciption">
+                Code: 171.1112010-40  Mark: 171-40</p>
+            </li>
+            <li class="slide last">
+              <img src="images/grip.png" class="grip" alt="gripimg">
+              <p class="slide-text-grip">Grip</p>
+              <p class="slide-desciption">
+                Code: 171.1112010-40  Mark: 171-40</p>
+            </li>
+          </ul>
+          <div class="buttons">
+            <button class="controls" id="previous">&lt;</button>
 
-        <button class="controls" id="next">&gt;</button>
-      </div>
-    </div>
+            <button class="controls" id="next">&gt;</button>
+          </div>
+        </div>
     <script src="js/main.js" charset="utf-8"></script>
   </body>
 </html>
