--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <div class="container">
           <ul id="slides">
             <li class="slide first">
-              <img src="images/myhacksaw.png" class="hacksaw" alt="hacksawimg">
-              <p class="slide-text">Hacksaw</p>
-              <p class="slide-desciption">
+              <img src="images/myhacksaw.png" class="slide-img-hacksaw" alt="hacksawimg">
+              <p class="slide-text-hacksaw">Hacksaw</p>
+              <p class="slide-description">
                 Code: 171.1112010-40  Mark: 171-40</p>
             </li>
             <li class="slide showing">
-              <img src="images/chainsaw.png" class="chainsaw" alt="chainsawimg">
-              <p class="slide-text">Chainsaw</p>
-              <p class="slide-desciption">
+              <img src="images/chainsaw.png" class="slide-img-chainsaw" alt="chainsawimg">
+              <p class="slide-text-chainsaw">Chainsaw</p>
+              <p class="slide-description">
                 Code: 171.1112010-40  Mark: 171-40</p>
             </li>
             <li class="slide last">
-              <img src="images/grip.png" class="grip" alt="gripimg">
+              <img src="images/grip.png" class="slide-img-grip" alt="gripimg">
               <p class="slide-text-grip">Grip</p>
-              <p class="slide-desciption">
+              <p class="slide-description">
                 Code: 171.1112010-40  Mark: 171-40</p>
             </li>
           </ul>
